src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.landing-container{
  position: relative;
  width: 100vw;
  padding-bottom: 66.67%;
  margin-bottom: 0
}

.landing-image{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  object-fit: cover
}

.landing-description-container{
  position:absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 2.5vw;
  color: white;
  text-align: center;
  width: 80%
}

.landing-description-container p{
  background-color: rgba(255, 255, 255 ,0.7);
  color: black;
  padding: 2vw;
  border-radius: 3rem
}

@media screen and (max-width: 821px) {
  .landing-container {
    width: 100%;
    padding-bottom: 0;
    position: relative;
  }
  
  .landing-image {
    position: relative;
    width: 100%;
    height: 50%;

  }
  
  .landing-description-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;
    padding-left: 10vw;
    padding-right: 10vw;
    transform: translate(-50%, -50%);
    font-size: 3vw;
    width: 100%;
    max-width: 800px;
    text-align: center;
    top:50%;
    transform: translate(-50%, -50%);
    right: 0;
    bottom: 0;
    vertical-align:top;

  }

}

